<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  MainActivity -->
    <string name="app_name">TMA03</string>
    <string name="action_scan">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="scan_text_view_string"></string>
    <string name="scan_button_string">Scan</string>
    <string name="record_button">O</string>
    <string name="up_button">+</string>
   	<string name="down_button">-</string>
   	<string name="camera_view">camera</string>
   	<string name="lock_view">lock</string>
    <color name="black">#000000</color>
    

    <!--  DeviceListActivity -->
   	<string name="button_scan">Scan for devices</string>
   	<string name="none_found">No devices found</string>
   	<string name="none_paired">No devices have been paired</string>
   	<string name="scanning">Scanning for devices</string>
   	<string name="select_device">Select a device to connect</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
</resources>
