<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
	<LinearLayout
	    android:id="@+id/linearLayout1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	    <View
	        android:layout_width="0dp"
	        android:layout_height="0dp"
	        android:layout_weight="1" />

	    <Button
	        android:id="@+id/recordButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="?android:attr/selectableItemBackground"
	        android:onClick="sendRecord"
	        android:text="@string/record_button"
	        android:textColor="#00FF00"
	        android:textSize="24sp" />

	</LinearLayout>
	
	<RelativeLayout
	    android:id="@+id/relativeLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:orientation="horizontal" >

        <edu.harvard.zhuanglab.tma03.TMACameraView
            android:contentDescription="@string/camera_view"
            android:id="@+id/cameraView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />
<!--            android:src="@drawable/ic_launcher" /> -->
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/downButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="sendFocusDown"
            android:text="@string/down_button"
            android:textColor="#FFFFFF"
            android:textSize="32sp" />
        <!--  
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
-->

        <edu.harvard.zhuanglab.tma03.TMALockView
            android:id="@+id/lockView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/lock_view" />

		<Button
            android:id="@+id/upButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="sendFocusUp"
            android:text="@string/up_button"
            android:textColor="#FFFFFF"
            android:textSize="32sp" />

	</LinearLayout>

</LinearLayout>